fix-restart service everytime when chef-client runs
This is a small fix which restarts the ntp service after every chef-client run.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,8 +22,9 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[yum::default]
-      - recipe[yum-epel::default]
-      - recipe[nginx::default]
+      - recipe[ntp::default]
+#      - recipe[yum::default]
+#      - recipe[yum-epel::default]
+#      - recipe[nginx::default]
     attributes:
 
