--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: ruby
 rvm:
 - 2.1.2
+install:
+ - cd chef-repo
+ - mkdir .chef
+ - echo 'cookbook_path ["/home/travis/build/techlinux/chef-repo/cookbooks"]' > .chef/knife.rb
+ - bundle install
+ - foodcritic -t ~ETSY006 -t ~CINK002 -I foodcritic/etsy/ -I foodcritic/customink-webops/ cookbooks
