--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
-language: ruby
-rvm:
-- 2.1.2
+language: generic
+
+sudo: false
+
+env:
+  global:
+  - PATH="/opt/chefdk/bin:/opt/chef/bin:/opt/chef/embedded/bin:/opt/chefdk/embedded/bin:$PATH"
+  matrix:
+  - COOKBOOK_PATH="cookbooks"
+
+addons:
+  apt:
+    sources:
+    - chef-stable-precise
+    packages:
+    - chefdk
+
+script: ./runtests
