--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -34,9 +34,9 @@ suites:
 #      - recipe[mariadb::_mysqlconf]
 #      - recipe[nginx::default]
 #      - recipe[nginx::techlinux]
-#      - recipe[php::default]
+      - recipe[php::default]
 #      - recipe[yum::default]
-      - recipe[cron::default]
+#      - recipe[cron::default]
 #      - recipe[yum-epel::default]
 #      - recipe[nginx::default]
     attributes:
